--- a/plore1.htm
+++ b/plore1.htm
@@ -8,16 +8,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -52,11 +50,11 @@
             </div>
         </section>
         <section class="menu" id="menu">
-            <div class="container">
+            <div class="container"  data-aos="zoom-out-up">
                 <div class="row align-items-lg-center">
                     <div class="col-12 col-md-6">
                         <img class="img-fluid"
-                            src="https://i.ya-webdesign.com/images/pubg-character-png-2.png"
+                            src="https://i.ya-webdesign.com/images/pubg-character-png-2.png"  data-aos="zoom-in"
                             alt"">
                     
                     </div>
@@ -103,8 +101,13 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="game2.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-
+        AOS.init({
+            offset: 400,
+            duration: 1000
+        });
     </script>
+   
 </body>
 </DOCTYPE>
