--- a/gloginsignin.htm
+++ b/gloginsignin.htm
@@ -1,7 +1,8 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
     <title>Title</title>
+    <link rel="stylesheet" href="gstyles.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,13 +19,15 @@
                   <input type="text" name="txt" placeholder="Username" required="">
                 <input type="email" name="email" placeholder="Email" required="">
                 <input type="password" name="pswd" placeholder="Password" required="">
+                <button>Signup</button>
               </form>
           </div>
           <div class="login">
               <form>
-                  <label>
-                      
-                  </label>
+                  <label for="chk" aria-hidden="true" >Login</label>
+                  <input type="email" name="email" placeholder="Email" required="">
+                    <input type="password" name="Passsword" placeholder="Password" required="">
+                    <button>Login</button>
               </form>
           </div>
               </div>
