--- a/gloginsignin.htm
+++ b/gloginsignin.htm
@@ -1,40 +1,37 @@
- <!doctype html>
-<html lang="en">
-  <head>
-    <title>Title</title>
-    <link rel="stylesheet" href="gstyles.css">
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>
+<html>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      <div class="main">
-          <input type ="checkbox" id ="chk" aria-hidden="true">
-          <div class="signup">
-              <form>
-                  <label for="chk" aria-hidden="true">Signup</label>
-                  <input type="text" name="txt" placeholder="Username" required="">
-                <input type="email" name="email" placeholder="Email" required="">
-                <input type="password" name="pswd" placeholder="Password" required="">
-                <button>Signup</button>
-              </form>
-          </div>
-          <div class="login">
-              <form>
-                  <label for="chk" aria-hidden="true" >Login</label>
-                  <input type="email" name="email" placeholder="Email" required="">
-                    <input type="password" name="Passsword" placeholder="Password" required="">
-                    <button>Login</button>
-              </form>
-          </div>
-              </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+<head>
+  <title>form</title>
+  <link rel="stylesheet" type="text/css" href="gstyles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="main">
+    <input type="checkbox" id="chk" aria-hidden="true">
+
+    <div class="signup">
+      <form>
+        <label for="chk" aria-hidden="true">Sign up</label>
+            <input type="email" name="email" placeholder="Email" required="">
+        <input type="text" name="txt" placeholder="Username" required="">
+    
+        <input type="password" name="pswd" placeholder="Password" required="">
+          <input type="password" name="pswd" placeholder="Password" required="">
+        <button>Sign up</button>
+      </form>
+    </div>
+
+    <div class="login">
+      <form>
+        <label for="chk" aria-hidden="true">Login</label>
+        <input type="email" name="email" placeholder="Email" required="">
+        <input type="password" name="pswd" placeholder="Password" required="">
+        <button>Login</button>
+      </form>
+    </div>
+  </div>
+</body>
+
 </html>
